--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,8 @@
 ---
-# tasks file for tokumura-orca48
----
 - hosts: 127.0.0.1
   user: vagrant
   gather_facts: false
   tasks:
-    - name: "git"
-      apt: pkg=git
-      sudo: yes
     - name: "wget"
       apt: pkg=wget
       sudo: yes
@@ -20,16 +15,15 @@
     - name: "apt-get update"
       apt: update_cache=yes
       sudo: yes
-    - name: "apt-get dist-upgrade"
-      apt: upgrade=full
-      sudo: yes
-    - name: "apt-get install jma-receipt"
+    - name: "apt-get install -y jma-receipt"
       apt: pkg=jma-receipt
       sudo: yes
     - action: command wget "https://ftp.orca.med.or.jp/pub/data/receipt/outline/update/claim_update.tar.gz"
     - name: "tar xzvf"
-      unarchive: src=/home/vagrant/claim_update.tar.gz dest=/home/vagrant
+      unarchive: src=./claim_update.tar.gz dest=./
     - shell: /bin/bash claim_update.sh
+      sudo: yes
+    - shell: service postgresql restart
       sudo: yes
     - shell: jma-setup
       sudo: yes
