--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,7 +29,7 @@
       sudo: yes
     - shell: service jma-receipt start
       sudo: yes
-#    - shell: /usr/lib/jma-receipt/bin/passwd_store.sh --stdin ormaster123
-#      sudo: yes
-#      sudo_user: orca
+    - shell: echo -e "ormaster123\normaster123\n" | /usr/lib/jma-receipt/bin/passwd_store.sh
+      sudo: yes
+      sudo_user: orca
 
