--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -29,7 +29,4 @@
       sudo: yes
     - shell: service jma-receipt start
       sudo: yes
-    - shell: echo -e "ormaster123\normaster123\n" | /usr/lib/jma-receipt/bin/passwd_store.sh
-      sudo: yes
-      sudo_user: orca
-
+#    - action: command echo -e "ormaster123\normaster123\n" | sudo -u orca /usr/lib/jma-receipt/bin/passwd_store.sh
